[package]
name = "font"
version = "0.1.0"
authors = ["sereyvathana <sereyvathana10@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.2" }
# iced_style = "0.2"
# iced_custom_widget = { git="https://github.com/koompi/iced_custom_widget.git", branch="master" }
toml = "0.5"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0"